# cluster

./: BUILD.bazel  go.mod  go.sum  main.go
cmd/: BUILD.bazel  execute.go  group.go  node.go  ping.go
cmd/group/: BUILD.bazel  add_node.go  create.go  delete.go  details.go  list.go  name.go
cmd/node/: BUILD.bazel  delete.go  deploy.go  list.go  name.go  scan.go  stats.go
controller/: BUILD.bazel  controller.go  group.go  node.go
node/: BUILD.bazel  node.go  service.go
service/: BUILD.bazel
